@@ -79,6 +79,9 @@
 #include <wtf/FastMalloc.h>
 #endif
 
-#if !PLATFORM(QT) // this breaks compilation of <QFontDatabase>, at least, so turn it off for now
+// this breaks compilation of <QFontDatabase>, at least, so turn it off for now
+// Also generates errors on wx on Windows, because these functions
+// are used from wx headers. 
+#if !PLATFORM(QT) && !PLATFORM(WX)
 #include <wtf/DisallowCType.h>
 #endif
